# rag_and_rerank_app

./: README.md
backend/: .env.sample  main.py  pyproject.toml
backend/api/v1/: endpoints.py
backend/crud/: person.py
backend/schemas/: person.py
backend/scripts/: vdb.py
backend/statics/: db.csv
backend/statics/vdb/: chroma.sqlite3
web/: package-lock.json  package.json  tsconfig.json
web/app/: page.tsx
